--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,12 +1,13 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
+    // See https://gjs.guide/extensions/development/debugging.html for how to debug Gnome extensions with Wayland
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build and Install",
+            "label": "Build",
             "type": "shell",
-            "command": "scripts/build.sh -i",
+            "command": "scripts/build.sh",
             "problemMatcher": [],
             "group": {
                 "kind": "build",
@@ -14,15 +15,21 @@
             }
         },
         {
+            "label": "Build and Install",
+            "type": "shell",
+            "command": "scripts/build.sh -i",
+            "problemMatcher": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            }
+        },
+        {
             "label": "Run nestet Gnome Shell",
-            "type": "process",
-            "command": "dbus-run-session",
-            "args": [
-                "--",
-                "gnome-shell",
-                "--nested",
-                "--wayland"
-            ],
+            "type": "shell",
+            "linux":{
+                "command": "scripts/launch_gnome_nested.sh"
+            },
             "problemMatcher": [],
             "isBackground": true,
         }
